@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2011/10/16 05:34:58 manu Exp $
+# $NetBSD: Makefile,v 1.2 2011/12/14 15:02:24 manu Exp $
 #
 
-DISTNAME=	SOPE-2.0.0b1
+DISTNAME=	SOPE-2.0.0b3
 CATEGORIES=	devel
 MASTER_SITES=	http://www.sogo.nu/files/downloads/SOGo/Sources/
 
